typography and twitter

--- a/jekyll-src/_includes/css/typography.less
+++ b/jekyll-src/_includes/css/typography.less
@@ -27,7 +27,9 @@ a:hover {
 }
 
 .main-topbar ul {
-  font-size: 17pt;
+  font-size: 18pt;
+  font-family: "ff-speak-web";
+  font-weight:300;
 }
 
 .main-logo{
