--- a/jekyll-src/_layouts/main.html
+++ b/jekyll-src/_layouts/main.html
@@ -6,6 +6,8 @@
   <title>Stanford Solar Decathlon</title>
   
   <link rel="stylesheet" href="css/all.css" type="text/css" media="screen" charset="utf-8">
+  <script type="text/javascript" src="//use.typekit.net/xxe2omr.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   
 </head>
 <body onLoad="load()">
