adding a bunch of images i don't like

--- a/jekyll-src/_includes/css/layout.less
+++ b/jekyll-src/_includes/css/layout.less
@@ -3,7 +3,9 @@ html, body {
   height: 100%;
   
   background-color: @brightwhite;
-  /*background: url('../images/bg_new.png');*/
+  //background: url('../images/bg_test1.png');
+  
+  
   
   background-repeat:no-repeat;
   background-position: top right;
@@ -88,8 +90,11 @@ html, body {
     margin-left: @leftbarwidth;
     margin-right: @leftbarwidth;
     padding: 5px;
-    background: @trwhite;
-    border: 1px solid @cardinal;
+    //background: @trwhite;
+    //border: 1px solid @cardinal;
+    background: url('../images/homebg.png');
+    height: 820px;
+    width: 910px;
   }
 
 }
